Finitions mode Stdin/Stdout (fonctionne dans la page javaFx), bien avancé le mode include. Coloration syntaxique.